RegressionTests/TestSuiteExport/reject/inline_asm_unexpected_token.blade
// EXPECT: fail
// DIAGNOSTICS: InlineAsmUnexpectedToken

fn f() void {
    var x: u32 = 0;
    asm {
        MOV {x} %0
    };
}
